# foldseek-pocket-miner

./: .gitignore  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  run_web.sh
examples/: example_usage.py
issue/issue_1_ligands_from_unaligned_chains/: README.md  check_align.pml
kamaji/: README.md  __init__.py  kamaji.py  metalclassifier.py  pdbparser.py  profile.py
kamaji/biochem/: bio.py  chem.py
kamaji/biochem/rotamers/richardson/: alaall  argall  asnall  aspall  cyhall  cysall  glnall  gluall  hisall  ileall  leuall  lysall  metall  pheall  proall  serall  thrall  trpall  tyrall  valall
kamaji/biochem/rotamers/richardsonHydro/: cyhallH  cysallH  serallH
src/foldseek_pocket_miner/: __init__.py  cli.py  conservation.py  foldseek_search.py  ligand_extractor.py  pocket_miner.py  pymol_session.py  structure_aligner.py  structure_downloader.py
web/: app.py  requirements.txt
web/templates/: index.html
